insurance funnel: Massive removing of unnecessary html tags and styling which corrects the alignment problems and correcting styles accordingly

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -941,6 +941,7 @@ nav ul a:hover {
   display: inline-block;
   background: #f2f2f2;
   padding-top: 5px;
+  border-radius: 6px;
 }
 
 .handex-color-1 {
